# swagger.yaml
@@ -130,6 +130,12 @@ paths:
       - application/json
       parameters:
       - &id003
+        description: Input for employee_id
+        in: path
+        name: employee_id
+        required: true
+        type: string
+      - &id004
         description: Input for org_id
         in: path
         name: org_id
@@ -143,7 +149,8 @@ paths:
       description: ' Accounts Test Url Test Undertest  Org Id '
       parameters:
       - *id003
-      - &id004
+      - *id004
+      - &id005
         description: ' Accounts Test Url Test Undertest  Org Id '
         in: body
         name: Undertest
@@ -175,6 +182,7 @@ paths:
       parameters:
       - *id003
       - *id004
+      - *id005
       responses:
         200:
           description: Success
@@ -184,6 +192,7 @@ paths:
       - application/json
       parameters:
       - *id003
+      - *id004
       - description: ' Accounts Test Url Test Undertest  Org Id '
         in: body
         name: Undertest
@@ -210,16 +219,16 @@ paths:
       consumes:
       - application/json
       parameters:
-      - &id005
-        description: Input for org_id
-        in: path
-        name: org_id
-        required: true
-        type: string
       - &id006
         description: Input for user_id
         in: path
         name: user_id
+        required: true
+        type: string
+      - &id007
+        description: Input for org_id
+        in: path
+        name: org_id
         required: true
         type: string
       responses:
@@ -229,9 +238,9 @@ paths:
     options:
       description: ' Accounts Test Url Test  User Id   Org Id '
       parameters:
-      - *id005
       - *id006
-      - &id007
+      - *id007
+      - &id008
         description: ' Accounts Test Url Test  User Id   Org Id '
         in: body
         name: Test
@@ -261,9 +270,9 @@ paths:
       consumes:
       - application/json
       parameters:
-      - *id005
       - *id006
       - *id007
+      - *id008
       responses:
         200:
           description: Success
@@ -272,7 +281,7 @@ paths:
     options:
       description: ' Utility Swagger Ui Generate Csv Data'
       parameters:
-      - &id008
+      - &id009
         description: ' Utility Swagger Ui Generate Csv Data'
         in: body
         name: Generate Csv Data
@@ -289,7 +298,7 @@ paths:
       consumes:
       - application/json
       parameters:
-      - *id008
+      - *id009
       responses:
         200:
           description: Success
@@ -319,7 +328,7 @@ paths:
       consumes:
       - application/json
       parameters:
-      - &id009
+      - &id010
         description: Input for filename
         in: path
         name: filename
@@ -332,7 +341,7 @@ paths:
     options:
       description: '  Path Filename '
       parameters:
-      - *id009
+      - *id010
       produces:
       - application/json
       responses:
